Revert "fixed text shadow"
This reverts commit 38835ab12fd319222341a3896648f855991ebeb8.
something got messed up.

--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -59,11 +59,11 @@ body {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
 }
-.page-header h1 {
+.jumbotron h1 {
   color: #25408f;
   text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.5);
 }
-.page-header h1 small {
+.jumbotron h1 small {
   color: #c26f1f;
   text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.5);
 }
@@ -133,7 +133,7 @@ h4 {
 #footer {
   background-color: #fdcd60;
 }
-.page-header {
+.jumbotron {
   background-color: transparent;
 }
 /* posts index */
